Fix connections box alignment

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -170,13 +170,11 @@ div.main {
     &.connections {
       p {
         color: @main-color-recommendation;
-        overflow: auto;
       }
       span.connections {
         font-size: 7em;
         line-height: 1em;
         color: @main-color;
-        float: left;
         display: block;
         margin-right: @main-box-margin / 3;
       }
